feat: implement SQLite persistence, multi-user support, and auto-reply Discord Bot
- Integrated 'better-sqlite3' for status history and user configurations.
- Added weekly analytics logic to track productivity and focus time.
- Implemented multi-user routing for independent status and webhook management.
- Added a full Discord Bot service for automated user replies via DMs and mentions.
- Expanded API with /analytics and /config endpoints for advanced management.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 PORT=3000
 DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/YOUR_WEBHOOK_ID/YOUR_WEBHOOK_TOKEN
+DISCORD_BOT_TOKEN=YOUR_DISCORD_BOT_TOKEN_FOR_AUTOREPLY
 
 API_URL=http://localhost:3000
-USER_ID=your_user_id
+USER_ID=hyusband
+    
