--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@fastify/cors": "^8.4.1",
+        "@fastify/env": "^4.2.0",
+        "axios": "^1.6.2",
+        "better-sqlite3": "^12.6.2",
+        "commander": "^11.1.0",
+        "discord.js": "^14.25.1",
+        "dotenv": "^16.3.1",
         "fastify": "^4.24.3",
         "fastify-plugin": "^4.5.1",
-        "@fastify/env": "^4.2.0",
-        "@fastify/cors": "^8.4.1",
-        "discord.js": "^14.13.0",
-        "axios": "^1.6.2",
-        "commander": "^11.1.0",
-        "ps-list": "^8.1.1",
-        "dotenv": "^16.3.1"
+        "ps-list": "^8.1.1"
     },
     "devDependencies": {
-        "typescript": "^5.2.2",
+        "@types/better-sqlite3": "^7.6.13",
         "@types/node": "^20.8.10",
-        "tsx": "^4.1.0"
+        "tsx": "^4.1.0",
+        "typescript": "^5.2.2"
     }
 }
