feat: implement camera detection, tray agent, and GitHub/WakaTime integrations
- Added Windows camera usage monitor for automatic meeting detection.
- Developed System Tray integration and native desktop notifications.
- Integrated GitHub notification polling and WakaTime activity sync.
- Added timezone awareness to state reporting and Discord embeds.
- Expanded shared types and agent loop to support advanced metadata.

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ DISCORD_BOT_TOKEN=YOUR_DISCORD_BOT_TOKEN_FOR_AUTOREPLY
 
 API_URL=http://localhost:3000
 USER_ID=hyusband
-    
+GITHUB_TOKEN=YOUR_GITHUB_PERSONAL_ACCESS_TOKEN
+WAKATIME_API_KEY=YOUR_WAKATIME_API_KEY
