--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "devDependencies": {
         "@types/better-sqlite3": "^7.6.13",
         "@types/node": "^20.8.10",
+        "@types/node-notifier": "^8.0.5",
         "tsx": "^4.1.0",
         "typescript": "^5.2.2"
     }
