--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "dotenv": "^16.3.1",
         "fastify": "^4.24.3",
         "fastify-plugin": "^4.5.1",
-        "ps-list": "^8.1.1"
+        "ps-list": "^8.1.1",
+        "winston": "^3.19.0"
     },
     "devDependencies": {
         "@types/better-sqlite3": "^7.6.13",
