--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
         "@types/node-notifier": "^8.0.5",
         "tsx": "^4.1.0",
         "typescript": "^5.2.2"
+    },
+    "optionalDependencies": {
+        "iohook": "^0.9.3"
     }
 }
