--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "dotenv": "^16.3.1",
         "fastify": "^4.24.3",
         "fastify-plugin": "^4.5.1",
+        "obs-websocket-js": "^5.0.7",
         "ps-list": "^8.1.1",
         "winston": "^3.19.0"
     },
