--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ PORT=3000
 DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/YOUR_WEBHOOK_ID/YOUR_WEBHOOK_TOKEN
 DISCORD_BOT_TOKEN=YOUR_DISCORD_BOT_TOKEN_FOR_AUTOREPLY
 GROQ_API_KEY=YOUR_GROQ_API_KEY_FOR_AI_SUMMARIES
+DISCORD_LOG_CHANNEL_ID=YOUR_DISCORD_CHANNEL_ID_FOR_REPORTS
 
 API_URL=http://localhost:3000
 USER_ID=hyusband
